# serverless-test

./: Dockerfile  lambda.py  pyproject.toml
