[tool.poetry]
name = "lambda-fastapi-trial"
version = "0.1.0"
description = ""
authors = ["tejas.kale <tejas.kale@coditas.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
mangum = "^0.19.0"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
